# causaljazz

./: CMakeLists.txt  README.md  bayesian.py  collider_conditional_test.py  cond2D_test.py  diamond_test.py  fast_hh.py  graph.py  graph_hh.py  jazz.py  lif.model  lif.tmat  mass.py  miind_compare.py  monte_carlo.py  pycard.py  repeat_test.py  requirements.txt  setup.py  vcpkg.json  what_is_cinddit.txt
causaljazz/: cpu.py  data.py  gpu.py  grid.py  inference.py  pmf.py  transition.py  visualiser.py
libs/: CMakeLists.txt  CMakeLists.txt.bak
libs/CausalJazz/: CMakeLists.txt  CausalJazz.cu  CausalJazz.cuh  CudaEuler.cu  CudaEuler.cuh  CudaGrid.cu  CudaGrid.cuh  MassPopulation.cu  MassPopulation.cuh  MassSimulation.cu  NdGrid.cpp  NdGrid.hpp  TimeVaryingNdGrid.cpp  TimeVaryingNdGrid.hpp  display.cpp  display.hpp
libs/Cinddit/: CMakeLists.txt  CMakeLists.txt.bak  CudaEuler.cu  CudaEuler.cuh  MassPopulation.cuh  MassSimulation.cu  MassSimulation.cuh  NdGrid.cpp  NdGrid.hpp  display.cpp  display.hpp  population.cu  population.cuh
libs/CindditPythonLib/: CMakeLists.txt  CMakeLists.txt.bak  PyCinddit.cpp  TransitionGenerator.cpp  TransitionGenerator.hpp
libs/PyCausalJazz/: CMakeLists.txt  CudaGridGenerator.cpp  CudaGridGenerator.hpp  FastMassPython.cpp  NdGridGenerator.cpp  NdGridGenerator.hpp
tests/: NGAFID_example.ipynb  NGAFID_example_vis.ipynb  neuron_population.py  quick_start_example.ipynb  quick_start_example.py
tests/MonteCarlo/: quick_start_example.ipynb  quick_start_example.py
tests/PopulationDensity/: quick_start_example.ipynb  quick_start_example.py
